--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,7 +55,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     implementation 'com.squareup.moshi:moshi:1.6.0'
-    implementation 'com.squareup.moshi:moshi-kotlin-codegen:1.6.0'
+//    implementation 'com.squareup.moshi:moshi-kotlin-codegen:1.6.0'
     kapt('com.squareup.moshi:moshi-kotlin-codegen:1.6.0')
 }
 repositories {
